--- a/services/python-executor/Dockerfile
+++ b/services/python-executor/Dockerfile
@@ -1,13 +1,11 @@
-# Usar la imagen base de Python
 FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt ./
-RUN pip install -r requirements.txt
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . ./
+COPY . .
 
-EXPOSE 5000
-
-CMD ["python", "app.py"]
+EXPOSE 8000
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
