--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python: Attach to Docker",
+      "name": "Python: Remote Attach",
       "type": "python",
       "request": "attach",
       "connect": {
